objects/Account.object
<CustomObject>
    <fields>
        <fullName>DRE_Client_Phase__c</fullName>
        <label>DRE Client Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strategic Pilot</fullName>
                </value>
                <value>
                    <fullName>Strategic Transactional</fullName>
                </value>
                <value>
                    <fullName>Enterprise Pilot</fullName>
                </value>
                <value>
                    <fullName>Enterprise Partner</fullName>
                </value>
                <value>
                    <fullName>Transactional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disclosure_Agreement_End_Date__c</fullName>
        <label>Disclosure Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disclosure_Agreement_Start_Date__c</fullName>
        <label>Disclosure Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disclosure_Agreement_Type__c</fullName>
        <label>Disclosure Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Confidential Disclosure Agreement (CDA)</fullName>
                </value>
                <value>
                    <fullName>Mutual Non-Disclosure Agreement (NDA)</fullName>
                </value>
                <value>
                    <fullName>Non Disclosure</fullName>
                    <label>Non-Disclosure (NDA)</label>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>General Services Agreement (GSA)</fullName>
                    <isActive>false</isActive>
                    <label>General Services Agreement (GSA)</label>
                </value>
                <value>
                    <fullName>Licensing Agreement (LA)</fullName>
                    <isActive>false</isActive>
                    <label>Licensing Agreement (LA)</label>
                </value>
                <value>
                    <fullName>Master Services Agreement (MSA)</fullName>
                    <isActive>false</isActive>
                    <label>Master Services Agreement (MSA)</label>
                </value>
                <value>
                    <fullName>Other Agreement (OA)</fullName>
                    <isActive>false</isActive>
                    <label>Other Agreement (OA)</label>
                </value>
                <value>
                    <fullName>Services Agreement (SA)</fullName>
                    <isActive>false</isActive>
                    <label>Services Agreement (SA)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Agreement_End_Date__c</fullName>
        <label>Master Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Master_Agreement_Start_Date__c</fullName>
        <label>Master Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Master_Agreement_Type__c</fullName>
        <label>Master Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Services Agreement (GSA)</fullName>
                </value>
                <value>
                    <fullName>Licensing Agreement (LA)</fullName>
                </value>
                <value>
                    <fullName>Master Services Agreement (MSA)</fullName>
                </value>
                <value>
                    <fullName>Other Agreement (OA)</fullName>
                </value>
                <value>
                    <fullName>Services Agreement (SA)</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Toggl_Id__c</fullName>
        <externalId>true</externalId>
        <label>Toggl Id</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>GROWTH_Evidence</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
        </filters>
        <label>GROWTH Evidence</label>
    </listViews>
    <listViews>
        <fullName>House_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>House</value>
        </filters>
        <label>House Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Sandy_GROWTH_Collaborative</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Sandra</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Lewis</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filters>
        <label>GROWTH Collaborative</label>
    </listViews>
</CustomObject>